--- a/.config/polybar/secondary.ini
+++ b/.config/polybar/secondary.ini
@@ -30,8 +30,8 @@ font-1 = fixed:pixelsize=10;1
 font-2 = "Wuncon Siji:style=Regular:size=10;2"
 font-3 = "waffle:style=Regular:size=10;2"
 
-modules-left = bspwm
-; modules-left = i3
+; modules-left = bspwm
+modules-left = i3
 modules-center = xwindow
 modules-right =
 
@@ -39,16 +39,16 @@ tray-position = right
 tray-padding = 2
 ;tray-background = #0063ff
 
-wm-restack = bspwm
+; wm-restack = bspwm
 ;wm-restack = i3
 
 ;override-redirect = true
 
-scroll-up = bspwm-desknext
-scroll-down = bspwm-deskprev
+; scroll-up = bspwm-desknext
+; scroll-down = bspwm-deskprev
 
-; scroll-up = #i3.next
-; scroll-down = #i3.prev
+scroll-up = #i3.next
+scroll-down = #i3.prev
 
 cursor-click = pointer
 ;cursor-scroll = ns-resize
