--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ source-file /home/lucky/.config/nvim/tmuxline
 unbind C-b
 
 set -g prefix C-Space
+set -g prefix C-a
+bind C-a send-prefix
 
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -11,14 +13,23 @@ set -g mouse on
 set -s escape-time 5
 set -g status-keys vi
 
-unbind v
-unbind h
-
 unbind % # Split vertically
 unbind '"' # Split horizontally
 
-bind v split-window -v -c "#{pane_current_path}"
-bind h split-window -h -c "#{pane_current_path}"
+bind % split-window -v -c "#{pane_current_path}"
+bind '"' split-window -h -c "#{pane_current_path}"
+
+# quickly open a new window
+bind N new-window
 
 set -g base-index 1
 set-window-option -g pane-base-index 1
+
+# pane movement shortcuts (same as vim)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+unbind p
+bind p paste-buffer
